Adding list of action items for tex/project

--- a/doc/sdss_mixtures.tex
+++ b/doc/sdss_mixtures.tex
@@ -31,6 +31,22 @@ David W. Hogg\nyu$^,$\mpia~,  et al. \\
 \begin{abstract}
 \end{abstract}
 
+
+\section{TOADD}
+
+\begin{itemize}
+
+\item slicing in variance, why do it, why it is or isnt ok
+
+\item steps towards PSF models, why rescaling here will be ok, and how we
+can put that rescaling right into the model
+
+\item steps towards calibration models, breaking some part of data and see 
+it comes out with low likelihoood, etc.
+
+\end{itemize}
+
+
 \section{Introduction}
 
 \begin{itemize}
